[project]
name = "practise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.4.2",
    "google-generativeai>=0.8.5",
    "icecream>=2.1.4",
    "litellm>=1.72.2",
    "openai>=1.85.0",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "streamlit>=1.46.0",
    "yfinance>=0.2.62",
]
